# es-shell

./: .gitattributes  .gitignore  Abstract  CHANGES  COPYING  ERRATA  INSTALL  Makefile  Makefile.in  README  README.md  Sample.esrc  TODO  access.c  closure.c  completion.es  config.h  config.h.in  configure.ac  configure.in  conv.c  dict.c  dump.c  es.1  es.h  esconfig.h  esdebug  esrc.haahr  eval.c  except.c  fd.c  gc.c  gc.h  glob.c  glom.c  heredoc.c  history.c  index.html  initial.es  input.c  (+48 more)
.circleci/: config.yml
completions/: complete-%and.es  complete-%append.es  complete-%background.es  complete-%create.es  complete-%home.es  complete-%is-interactive.es  complete-%not.es  complete-%open-append.es  complete-%open-create.es  complete-%open-write.es  complete-%open.es  complete-%openfile.es  complete-%or.es  complete-%pathsearch.es  complete-%read.es  complete-%run.es  complete-%var.es  complete-%whatis.es  complete-cd.es  complete-eval.es  complete-exec.es  complete-false.es  complete-if.es  complete-ls.es  complete-man.es  complete-newpgrp.es  complete-throw.es  complete-time.es  complete-true.es  complete-unwind-protect.es  complete-var.es  complete-wait.es  complete-whatis.es  complete-while.es
doc/: ERRATA  TODO  es.1  usenix-w93.ps
examples/: adventure.es  cd_colourprompt.es  cd_follow-symbolic.es  cd_history.es  cdpath.es  es-mode.el  jamesh.esrc  noclobber.es  nullcmd.es  number.es  preparse.es  sh_compat  vscode-integration.es
examples/friedman/: README
examples/friedman/lib/: =TODO  churchnum.es  compress.es  compresstbl.es  dirs.es  equal.es  exports.es  hash.es  help.es  hook.es  list.es  load.es  repl.es  setterm.es  type-pred.es  which.es  y-or-n-p.es
examples/friedman/main/: env.es  misc.es
examples/friedman/os/: sunos4.1.es
examples/friedman/term/: vt100.es
m4/: readline.m4
mail-archive/: .mhonarc.db  maillist.html  msg00000.html  msg00001.html  msg00002.html  msg00003.html  msg00004.html  msg00005.html  msg00006.html  msg00007.html  msg00008.html  msg00009.html  msg00010.html  msg00011.html  msg00012.html  msg00013.html  msg00014.html  msg00015.html  msg00016.html  msg00017.html  msg00018.html  msg00019.html  msg00020.html  msg00021.html  msg00022.html  msg00023.html  msg00024.html  msg00025.html  msg00026.html  msg00027.html  msg00028.html  msg00029.html  msg00030.html  msg00031.html  msg00032.html  msg00033.html  msg00034.html  msg00035.html  msg00036.html  msg00037.html  (+1050 more)
share/: autoload.es  cdpath.es  interactive-init.es  path-cache.es  status.es
stylesheets/: styles.css
test/: circleci.es  fuzz.es  run-tests.es  test.es  testme.es  testrun.c
test/fuzz/: dict.txt  mkdict.es
test/fuzz/tests/: 99bottles.es  Y.es  access-exceptions1.es  access-exceptions2.es  access-exceptions3.es  access-exceptions4.es  access-file-permissions.es  access-file-types1.es  access-file-types2.es  access-file-types3.es  access-file-types4.es  array.es  cd_follow-symbolic.es  cdpath.es  date.es  emacs.es  esrc.es  example-matches-match1.es  example-matches-match2.es  example-matches-match3.es  example-redirects-redirect1.es  exec.es  globrange1.es  globrange2.es  globrange3.es  globrange4.es  globrange5.es  globrange6.es  globrange7.es  globstar1.es  globstar10.es  globstar11.es  globstar12.es  globstar13.es  globstar2.es  globstar3.es  globstar4.es  globstar5.es  globstar6.es  globstar7.es  (+42 more)
test/tests/: access.es  embedded-eq.es  example.es  glob.es  match.es  option.es  parse.es  read.es  regression.es  subscript.es  syntax.es  trip.es  wait.es
